# tropic

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CNAME  Dockerfile  Dockerfile_old  LICENSE  README.md  data.csv  docker-compose.yml  generate-data.py  index.html  requirements.txt  template.xlsx  test.ipynb  todo.md
.github/workflows/: deploy.yml
assets/src/: draw_dataset_comp.py  draw_dataset_exp.py  draw_erd.py  draw_functional_groups.py  draw_publications.py  figures.ipynb  style.mplstyle
data/: cde_script.py  data (version 1).xlsx  data.csv  db.pkl  doi_cache.sqlite  input_computational.csv  input_computational.xlsx  input_computational_bis.xlsx  input_experimental.csv  input_experimental.xlsx  parser.py  references.csv  template.xlsx
data/extrapolation/: 10.1021_acs.jpca.3c05870_C=C1CCOC1=O_1.csv  10.1021_acs.jpca.3c05870_CC1CCCC_=O_O1_1.csv  10.1021_acs.jpca.3c05870_CC1CCC_=O_OC1_1.csv  10.1021_acs.jpca.3c05870_CC1CCC_C_C_C_OC_=O_C1_1.csv  10.1021_acs.jpca.3c05870_CC1CCOC_=O_C1_1.csv  10.1021_acs.jpca.3c05870_CC1OCCOC1=O_1.csv  10.1021_acs.jpca.3c05870_CC1SCCSC1=O_1.csv  10.1021_acs.jpca.3c05870_CC1_C_COC_=O_OC1_1.csv  10.1021_acs.jpca.3c05870_CC1_C_SCCSC1=O_1.csv  10.1021_acs.jpca.3c05870_CC2_c1ccccc1_COC_=O_OC2_1.csv  10.1021_acs.jpca.3c05870_CCC2_c1ccccc1_COC_=O_OC2_1.csv  10.1021_acs.jpca.3c05870_CCCC1CCCC_=O_O1_1.csv  10.1021_acs.jpca.3c05870_CCCCC1CCCC_=O_O1_1.csv  10.1021_acs.jpca.3c05870_CCCCCC1CCCC_=O_O1_1.csv  10.1021_acs.jpca.3c05870_CCCCCCC1CCCC_=O_O1_1.csv  10.1021_acs.jpca.3c05870_CCCCCCCC1CCCC_=O_O1_1.csv  10.1021_acs.jpca.3c05870_CCCCCCCCCC1CCCC_=O_O1_1.csv  10.1021_acs.jpca.3c05870_O=C1CCCCCCCN1_1.csv  10.1021_acs.jpca.3c05870_O=C1CCCCO1_1.csv  10.1021_acs.jpca.3c05870_O=C1CCCCS1_1.csv  10.1021_acs.jpca.3c05870_O=C1CCO1_1.csv  10.1021_acs.jpca.3c05870_O=C1NCCCO1_1.csv  10.1021_acs.jpca.3c05870_O=C1OCCSC1_1.csv  10.1021_acs.jpca.3c05870_O=C1SCCCC1C_1.csv  10.1021_acs.jpca.3c05870_O=C1SCCCC1_C_C_1.csv  10.1021_acs.jpca.3c05870_O=C1SCCC_C_C1_1.csv  10.1021_acs.jpca.3c05870_O=C1SCCSC1C2=CC=CC=C2_1.csv  10.1021_acs.jpca.3c05870_S=C1CCCCCO1_1.csv  10.1021_acs.jpca.3c05870_S=C1OCCCC1_1.csv  10.1021_acs.jpca.3c05870_S=C1OCCCO1_1.csv  10.1021_acs.jpca.3c05870_S=C1SCCCO1_1.csv  10.1021_acs.jpca.3c05870_S=C1SCCSC1C2=CC=CC=C2_1.csv  10.1021_acs.jpca.3c05870_S=C1SCCSC1C_1.csv  10.1021_acs.jpca.3c05870_S=C1SCCSC1_1.csv  10.1021_acs.jpca.3c05870_S=C_C_C__C_S1_SC_C__C_C1=S_1.csv  10.1021_jo702567v_O=C1CCCO1_1.csv
data/literature/: 1.html
data/vanthoff/: Buchard_PolymChem_2022.xlsx  Buchard_PolymChem_2022_DCE.xlsx  Buchard_PolymChem_2022_THF.xlsx  Buchard_PolymChem_2023_DCE.xlsx  Cai_Zhu_2023_NatCommun_M1.xlsx  Cai_Zhu_2023_NatCommun_M10.xlsx  Cai_Zhu_2023_NatCommun_M11.xlsx  Cai_Zhu_2023_NatCommun_M12.xlsx  Cai_Zhu_2023_NatCommun_M2.xlsx  Cai_Zhu_2023_NatCommun_M3.xlsx  Cai_Zhu_2023_NatCommun_M4.xlsx  Cai_Zhu_2023_NatCommun_M5.xlsx  Cai_Zhu_2023_NatCommun_M6.xlsx  Cai_Zhu_2023_NatCommun_M8.xlsx  Cai_Zhu_2023_NatCommun_M9.xlsx  Chen_JACS_2022_Nylon.xlsx  Chen_JACS_MBL.xlsx  Chen_NatCHem_2015_gBL.xlsx  Dubois_2003_DX_bulk.xlsx  Endo_1998_M1.xlsx  Endo_1998_M2.xlsx  Endo_1998_M3.xlsx  Endo_1998_M4.xlsx  Endo_1998_M5.xlsx  Hoye_2020_KVL.xlsx  Jhurry_PolymInt_2010.xlsx  Li_ACIE_2022__MVL.xlsx  Reaction_graph.xlsx  Ren_MACS_2022_dCTC.xlsx  Rieger_Macromolecules_2025_nopL.xlsx  Soum_2002_bBL.xlsx  Soum_2002_dCL.xlsx  Soum_2002_dVL.xlsx  Soum_2002_eCL.xlsx  Tao_ACIE_2024.xlsx  Thevenon_JACS_2024_M1.xlsx  Thevenon_JACS_2024_M1_H2.xlsx  Xu_NatCommun_2024_aBuVL.xlsx  Xu_NatCommun_2024_aEtVL.xlsx  Xu_NatCommun_2024_aHexVL.xlsx  (+5 more)
data/wip/: input_computational-1.xlsx  input_computational-2.xlsx  input_computational.xlsx  merge.ipynb
nginx/: Dockerfile
roppy-api/: README.md  pyproject.toml
roppy-api/src/roppy/api/: __init__.py  api.py  build.py  documents.py  filters.py  test.py
roppy-core/: README.md  pyproject.toml
roppy-core/assets/: draw_dataset.py  draw_erd.py  draw_functional_groups.py  draw_publications.py  raw_data.py
roppy-react/: README.md  package-lock.json  package.json
roppy-react/src/: App.tsx  main.tsx
roppy-web/: README.md  pyproject.toml
src/roppy/: app copy.py  app.py  generate-data.py
tropic-api/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
tropic-api/nginx/: default.conf
tropic-api/src/tropic/api/: __init__.py  api.py  build.py  documents.py  filters.py  load.py  paginate.py  settings.py
tropic-client/: README.md  pyproject.toml
tropic-client/src/tropic/client/: __init__.py  client.py
tropic-core/: README.md  pyproject.toml
tropic-core/src/tropic/core/: __init__.py  constants.py  efgs.py  models.py  validate.py
tropic-web/: .prettierignore  README.md  next.config.mjs  package-lock.json  package.json  pyproject.toml
tropic-web-react/: package-lock.json  package.json
tropic-web-react/assets/: style.css
tropic-web-react/components/: AnalysisChart.tsx  Breadcrumbs.tsx  DrawModal.tsx  ExportControls.tsx  Footer.tsx  Header.tsx  InfoCards.tsx  Layout.tsx  MoleculeViewerCard.tsx  MonomerInfoCard.tsx  MonomerLogo.tsx  MonomerReactionTable.tsx  MonomerSearchSidebar.tsx  MonomerSearchTable.tsx  MonomerSummary.tsx  MonomerSummaryHeader.tsx  MonomerTabsView.tsx  PlotCards.tsx  ReactionSearchSidebar.tsx  ReactionSearchTable.tsx  ReactionSummary.tsx  ReactionTabsView.tsx  References.tsx  ReferencesTable.tsx  TableFormats.tsx  TabsView.tsx  Welcome.tsx
tropic-web-react/lib/: api.ts  constants.js  export.ts  types.ts
tropic-web-react/pages/: _app.tsx  about.tsx  docs.tsx  index.tsx
tropic-web/assets/: style.css
tropic-web/components/: AboutSection.tsx  AnalysisChart.tsx  ApiDocs.tsx  Breadcrumbs.tsx  ExportControls.tsx  Footer.tsx  Header.tsx  InfoCards.tsx  Layout.tsx  MoleculeViewerCard.tsx  MonomerLogo.tsx  MonomerReactionTable.tsx  MonomerSearchSidebar.tsx  MonomerSearchTable.tsx  MonomerSummaryHeader.tsx  MonomerTabsView.tsx  PlotCards.tsx  ReactionSearchSidebar.tsx  ReactionSummary.tsx  TableFormats.tsx
tropic-web/lib/: api.ts  constants.js  types.ts
tropic-web/pages/: _app.tsx  _document.tsx  (+2 more)
(+97 files in other folders)
