[build-system]
requires = ["setuptools >= 42", "versioningit ~= 1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tropic-api"
description = "API server for TROPIC."
readme = "/README.md"
keywords = ["polymerisation", "database"]
license = { text = "MIT" }
authors = [{ name = "Alex Ganose" }]
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.9",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.1",
    "beanie",
    "fastapi",
    "fastapi-filter",
    "uvicorn",
    "requests-cache",
    "pydantic-settings",
    "numpy",
    "pandas",
    "motor",
    "rdkit",
    "scipy",
    "tqdm",
    "openpyxl",
]

[project.optional-dependencies]
strict = [
    "pydantic==2.6.2",
]

[project.scripts]
tropic-api = "tropic.api.api:main"
tropic-build = "tropic.api.build:main"
tropic-load = "tropic.api.load:main"

[project.urls]
homepage = "https://virtualatoms.github.io/tropic/"
repository = "https://github.com/virtualatoms/tropic"
documentation = "https://virtualatoms.github.io/tropic/"
changelog = "https://github.com/virtualatoms/tropic/blob/main/CHANGELOG.md"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true

[tool.pytest.ini_options]
addopts = "-p no:warnings --import-mode=importlib"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py310"
lint.select = ["ALL"]
lint.ignore = [
    "EM",      # exception message must not use f-string literal
    "ERA001",  # found commented out code
    "FBT001",  # bool positional argument in function definition
    "FBT002",  # bool positional argument in function definition
    "FIX002",  # TODOs
    "TD",      # TODOs
    "TRY003",  # long message outside exception class
]
lint.pydocstyle.convention = "numpy"
lint.isort.known-first-party = ["tropic"]
lint.isort.split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/*" = ["ANN", "ARG001", "D", "INP001", "S101"]
"docs/*" = ["INP001"]
